--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
-    "@angular/common": "^18.1.0",
+    "@angular/cdk": "^18.2.0",
+    "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.0",
+    "@angular/core": "^18.2.0",
     "@angular/forms": "^18.1.0",
+    "@angular/material": "^18.2.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.4",
+    "arcee-health-latest": "file:",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.4",
-    "@angular/cli": "^18.1.4",
+    "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
