--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
@@ -25,6 +26,7 @@
     "@angular/ssr": "^18.2.0",
     "arcee-health-latest": "file:",
     "express": "^4.18.2",
+    "firebase": "^10.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
